changed import issues

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
         "rootDir": "src",
         "lib": ["ESNext"],
         "target": "ESNext",
-        "module": "NodeNext",
-        "moduleResolution": "NodeNext",
+        "module": "CommonJS",
+        "moduleResolution": "Classic",
         "declaration": true,
         "declarationMap": true,
         "composite": false,
@@ -25,7 +25,7 @@
         "noPropertyAccessFromIndexSignature": false,
         "noFallthroughCasesInSwitch": true,
         "noUncheckedIndexedAccess": true,
-        "resolveJsonModule": true,
+        "resolveJsonModule": false,
         "useUnknownInCatchVariables": false,
 
         "strict": true,
