--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
         "rootDir": "src",
         "lib": ["ESNext"],
         "target": "ESNext",
-        "module": "CommonJS",
-        "moduleResolution": "Classic",
+        "module": "ESNext",
+        "moduleResolution": "Node",
         "declaration": true,
         "declarationMap": true,
         "composite": false,
