--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
         "lib": ["ESNext"],
         "target": "ESNext",
         "module": "ESNext",
-        "moduleResolution": "Node",
+        "moduleResolution": "Bundler",
         "declaration": true,
         "declarationMap": true,
         "composite": false,
@@ -28,7 +28,6 @@
         "resolveJsonModule": false,
         "useUnknownInCatchVariables": false,
 
-        "strict": true,
         "strictFunctionTypes": true,
         "strictNullChecks": true,
         "strictBindCallApply": true,
